Add email field in Topology Owner page.

--- a/less/app.less
+++ b/less/app.less
@@ -738,6 +738,7 @@ button.standard:hover:not([disabled]) {
     margin-right: 10px;
   }
   .file-input {
+    height: 35px;
     input[type=text] {
       padding-left: 10px;
       background-color: var(--formBackground);
