Complete the Vans Patch for host analysis dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -912,6 +912,12 @@ html[data-theme='dark'] {
           }
         }
       }
+      .vans-patch-record {
+        margin-top: 35px;
+        .cell-header {
+          color: var(--primaryContentHeader);
+        }
+      }
       .settings {
         position: relative;
         overflow: hidden;
@@ -1340,6 +1346,8 @@ html[data-theme='dark'] {
   }
 }
 #hostModalDialog-content {
+  width: 1405px;
+  max-width: 1405px !important;
   .main-content {
     & > .nav ul li.header {
       cursor: pointer;
