Complete adding Vans patch and Vans patch group dialogs.

--- a/less/modal.less
+++ b/less/modal.less
@@ -917,6 +917,10 @@ html[data-theme='dark'] {
         .cell-header {
           color: var(--primaryContentHeader);
         }
+        .status-item {
+          padding: 5px;
+          border-radius: 5px;
+        }
       }
       .settings {
         position: relative;
@@ -1346,8 +1350,8 @@ html[data-theme='dark'] {
   }
 }
 #hostModalDialog-content {
-  width: 1405px;
-  max-width: 1405px !important;
+  width: 1378px;
+  max-width: 1378px !important;
   .main-content {
     & > .nav ul li.header {
       cursor: pointer;
@@ -2201,6 +2205,23 @@ html[data-theme='dark'] {
   }
 }
 #vansPatchRecordDialog-dialog {
+  .date-picker input {
+    height: 25px;
+  }
+  .back-btn {
+    top: 5px;
+  }
+  .patch-table {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .cell-header {
+    color: var(--primaryContentHeader);
+  }
+  .status-item {
+    padding: 5px;
+    border-radius: 5px;
+  }
   .filter-wrapper {
     .filter-section {
       width: 300px;
@@ -2209,7 +2230,7 @@ html[data-theme='dark'] {
       }
     }
     .date-picker {
-      margin-top: 13px;
+      margin-top: 10px;
       margin-right: 0;
     }
   }
