Add pdf export functionality for Vans Patch page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2209,6 +2209,11 @@ html[data-theme='dark'] {
   .back-btn {
     top: 5px;
   }
+  .pdf-btn {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+  }
   .patch-table {
     margin-top: 20px;
     margin-bottom: 20px;
