Host privilege bug fix. Add pdf export for Vans Patch Group dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2211,8 +2211,14 @@ html[data-theme='dark'] {
   }
   .pdf-btn {
     position: absolute;
-    top: 15px;
-    right: 10px;
+    &.group {
+      top: 35px;
+      right: 10px;
+    }
+    &.details {
+      top: 15px;
+      right: 10px;
+    }
   }
   .patch-table {
     margin-top: 20px;
