Add view more device info for HMD system section.

--- a/less/app.less
+++ b/less/app.less
@@ -3966,6 +3966,15 @@ button.standard:hover:not([disabled]) {
           top: 0 !important;
           right: 0;
         }
+        .system-btn-group {
+          position: absolute;
+          top: 0 !important;
+          right: 0;
+          button {
+            float: left;
+            margin-left: 10px;
+          }
+        }
         table {
           &.ip,
           &.host,
