Complete the HMD view more info dialog.

--- a/less/app.less
+++ b/less/app.less
@@ -2641,6 +2641,13 @@ button.standard:hover:not([disabled]) {
               margin: 0;
               margin-top: 35px;
             }
+            &.steps-host {
+              .view-more {
+                position: absolute;
+                top: -45px;
+                right: 0;
+              }
+            }
             &.steps-owner {
               .removePhoto {
                 label {
