--- a/less/modal.less
+++ b/less/modal.less
@@ -2663,6 +2663,7 @@ html[data-theme='dark'] {
 }
 #deviceInfoDialog-content {
   max-height: 800px;
+  min-width: 800px;
   table {
     td {
       vertical-align: top;
