Add HMD export functionality for HMD settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -3847,6 +3847,26 @@ button.standard:hover:not([disabled]) {
             top: -45px;
             right: 0;
           }
+          .sub-section {
+            width: 100%;
+            margin-bottom: 15px;
+            .import-header {
+              text-align: left;
+              margin-bottom: 10px;
+            }
+            .date-picker {
+              margin-right: 0;
+            }
+            #importHmd {
+              float: left;
+              margin-right: 10px;
+            }
+            .export-btn,
+            .import-btn {
+              float: left;
+              height: 34px;
+            }
+          }
         }
       }
     }
