--- a/less/modal.less
+++ b/less/modal.less
@@ -2560,6 +2560,7 @@ html[data-theme='dark'] {
   .content {
     width: 330px;
     padding: 15px 10px 5px 10px;
+    overflow: hidden;
     .group {
       margin-bottom: 10px;
       textarea,
@@ -2573,6 +2574,26 @@ html[data-theme='dark'] {
     .fg-add {
       color: #fff;
       background-color: var(--formCheckRadioColor) !important;
+    }
+    .date-time-picker {
+      float: left;
+      width: 135px;
+      margin-bottom: 5px;
+      input {
+        padding: 10px 0px 10px 15px;
+      }
+    }
+    .between {
+      float: left;
+      margin-top: 8px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+    .MuiIconButton-root {
+      color: var(--primaryTextColor) !important;
+      &:hover {
+        background-color: rgba(0, 0, 0, 0) !important;
+      }
     }
   }
 }
