Various fixes for Vans Patch.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2691,6 +2691,7 @@ html[data-theme='dark'] {
   table {
     td {
       vertical-align: top;
+      white-space: pre-wrap;
       &.long-field {
         display: block;
         height: 200px;
