Minor style updates.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2694,7 +2694,7 @@ html[data-theme='dark'] {
       white-space: pre-wrap;
       &.long-field {
         display: block;
-        height: 200px;
+        max-height: 200px;
         overflow-y: auto;
       }
     }
