--- a/less/modal.less
+++ b/less/modal.less
@@ -2569,7 +2569,8 @@ html[data-theme='dark'] {
 }
 #hostFilterPopover {
   .content {
-    width: 330px;
+    width: auto;
+    min-width: 300px;
     padding: 15px 10px 5px 10px;
     overflow: hidden;
     .group {
