Various updates and fixes for Vans page and account page.

--- a/less/app.less
+++ b/less/app.less
@@ -738,6 +738,7 @@ button.standard:hover:not([disabled]) {
   }
   .file-input {
     height: 35px;
+    width: 100%;
     input[type=text] {
       padding-left: 10px;
       background-color: var(--formBackground);
