--- a/less/modal.less
+++ b/less/modal.less
@@ -1800,7 +1800,13 @@ html[data-theme='dark'] {
 }
 #privilegeEditDialog {
   .role-name {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+  }
+  .group {
+    margin-bottom: 0;
+    .privilege-checkbox {
+      margin-left: -8px;
+    }
   }
   footer {
     text-align: center;
@@ -2441,6 +2447,9 @@ html[data-theme='dark'] {
   .form-input {
     margin: 15px 5px;
   }
+}
+#changePasswordDialog-content {
+  overflow: hidden;
 }
 #privilegeAddDialog-content  {
  overflow: hidden; 
