Add Vans Notes status validations.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1368,6 +1368,12 @@ html[data-theme='dark'] {
       overflow: hidden;
       padding: 5px 10px 15px 10px;
       overflow: auto;
+      .error-msg {
+        color: #f44336;
+        font-size: 0.75rem;
+        margin-top: 5px;
+        margin-left: 10px;
+      }
       .group {
         margin: 16px 0;
         &.color {
