Update logo name in login and scp page.

--- a/less/login.less
+++ b/less/login.less
@@ -35,19 +35,15 @@ html[data-theme='dark'] {
     width: 400px;
   }
   #loingTitle {
+    display: flex;
+    align-items: center;
     color: #fff;
     margin-bottom: 5px;
     img {
-      float: left;
       margin-right: 10px;
-      margin-top: 12px;
     }
     .title {
-      font-size: 2em;
-    }
-    .subtitle {
-      margin-left: 5px;
-      font-size: 1.5em;
+      font-size: 1.8em;
     }
   }
   #loingForm {
