--- a/less/app.less
+++ b/less/app.less
@@ -434,9 +434,8 @@ button.standard:hover:not([disabled]) {
     top: 4px;
     font-size: 1.6em;
     letter-spacing: 1px;
-    img {
-      float: left;
-      margin-top: 7px;
+    .company-name {
+      display: inline-block;
       margin-right: 10px;
     }
   }
