Make unit and title required for Config page. Update logic for filter time range.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1792,6 +1792,12 @@ html[data-theme='dark'] {
     }
     .group {
       margin: 20px 10px;
+      .error-msg {
+        font-size: 0.75rem;
+        color: #da364a;
+        margin-top: 3px;
+        margin-left: 13px;
+      }
     }
     .switch-control {
       position: relative;
