Fix department error display bug.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2140,11 +2140,14 @@ html[data-theme='dark'] {
 }
 #renderNameDialog-dialog {
   max-width: 300px;
-  textarea {
-    margin-bottom: 5px;
-  }
-  .combo-box {
-    margin: 10px 0;
+  #renderNameDialog-content {
+    overflow: hidden;
+    textarea {
+      margin-bottom: 5px;
+    }
+    .combo-box {
+      margin: 10px 0;
+    }
   }
 }
 #fileModal-content {
