Add HMD scan distribution keyvalue array in NCCST report API.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2506,6 +2506,9 @@ html[data-theme='dark'] {
 #reportNCCSTdialog-content {
   max-height: 400px;
   padding: 25px;
+  .align-center {
+    text-align: center;
+  }
   .message {
     margin-bottom: 15px;
   }
