Minor code updates.

--- a/less/app.less
+++ b/less/app.less
@@ -3859,6 +3859,7 @@ button.standard:hover:not([disabled]) {
             }
             #importHmd {
               float: left;
+              width: 32%;
               margin-right: 10px;
             }
             .export-btn,
