--- a/less/app.less
+++ b/less/app.less
@@ -3842,10 +3842,14 @@ button.standard:hover:not([disabled]) {
             width: 5%;
             margin-left: 1%;
           }
-          .connections-test {
+          .header-btn-group {
             position: absolute;
             top: -45px;
             right: 0;
+            button {
+              float: left;
+              margin-left: 10px;
+            }
           }
           .sub-section {
             width: 100%;
@@ -3859,6 +3863,7 @@ button.standard:hover:not([disabled]) {
             }
             #importHmd {
               float: left;
+              width: 32%;
               margin-right: 10px;
             }
             .export-btn,
