--- a/less/app.less
+++ b/less/app.less
@@ -782,6 +782,11 @@ button.standard:hover:not([disabled]) {
         span {
           float: left;
         }
+        .fg-update {
+          width: 25px;
+          height: 22px;
+          color: var(--buttonTextColor);
+        }
       }
       .last-update {
         float: right;
