Begin adding fields for SOAR action type.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2532,7 +2532,7 @@ html[data-theme='dark'] {
   }
 }
 #soarSettingsDialog-content {
-  width: 350px;
+  width: 370px;
   .soar-form {
     margin: 10px;
     .c-multi > .group {
@@ -2572,6 +2572,20 @@ html[data-theme='dark'] {
           border-top: 1px solid var(--primaryBorder);
         .group {
           width: 100%;
+        }
+      }
+      .request-multi {
+        .fg-close,
+        .fg-add {
+          top: 15px;
+        }
+        .request-headers {
+          margin-left: 10px;
+          margin-top: 15px;
+          margin-bottom: -5px;
+          .request-field {
+            margin-bottom: 15px;
+          }
         }
       }
     }
