Complete adding the restaul api field for SOAR action type.

--- a/less/app.less
+++ b/less/app.less
@@ -1374,6 +1374,24 @@ button.standard:hover:not([disabled]) {
         margin-top: 13px;
         margin-left: 10px;
       }
+      .request-multi {
+        .group {
+          margin-bottom: 15px;
+          .request-headers {
+            width: 50%;
+          }
+          .request-header,
+          .request-field {
+            margin-right: 1.5%;
+          }
+          .request-header {
+            width: 32%;
+          }
+          .request-field {
+            width: 65%;
+          }
+        }
+      }
     }
     &.soar-flow {
       .flow-wrapper {
