--- a/less/modal.less
+++ b/less/modal.less
@@ -2583,6 +2583,7 @@ html[data-theme='dark'] {
           margin-left: 10px;
           margin-top: 15px;
           margin-bottom: -5px;
+          .request-header,
           .request-field {
             margin-bottom: 15px;
           }
