Add LA analysis for Host Safety Scan tab.

--- a/less/app.less
+++ b/less/app.less
@@ -2238,6 +2238,11 @@ button.standard:hover:not([disabled]) {
               padding: .3em 1em;
             }
           }
+          .options-btns {
+            float: right;
+            margin-top: 15px;
+            margin-right: 20px;
+          }
           ul.host-list,
           ul.safety-list {
             & > li {
