Fix the position issue for Host CPE safety buttons.

--- a/less/app.less
+++ b/less/app.less
@@ -2231,19 +2231,19 @@ button.standard:hover:not([disabled]) {
           .clear-btn {
             margin: 18px 0px 10px 5px;
           }
-          .safety-btns {
-            position: absolute;
-            top: 70px;
-            right: 15px;
-            button {
-              margin: 0 3px;
-              padding: .3em 1em;
-            }
-          }
           .options-btns {
             float: right;
             margin-top: 15px;
             margin-right: 20px;
+          }
+          .safety-btns {
+            float: right;
+            margin-top: 15px;
+            margin-right: 15px;
+            button {
+              margin: 0 3px;
+              padding: .3em 1em;
+            }
           }
           ul.host-list,
           ul.safety-list {
