--- a/less/modal.less
+++ b/less/modal.less
@@ -55,7 +55,7 @@ html[data-theme='dark'] {
   }
   & > .dialog > .content {
     max-width: 1280px;
-    max-height: 715px;
+    max-height: 75vh;
   }
   & > .dialog > footer > button {
     margin: 0 0.3em;
