Updates for filter clear logic.

--- a/less/app.less
+++ b/less/app.less
@@ -2119,6 +2119,7 @@ button.standard:hover:not([disabled]) {
             }
             .severity {
               margin-top: 4px;
+              margin-left: 10px;
               .group-options {
                 margin: 5px 0px -10px 10px;
               }
