Add tenancy logic for adding user account.

--- a/less/modal.less
+++ b/less/modal.less
@@ -384,6 +384,9 @@ html[data-theme='dark'] {
         margin-top: 10px;
       }
     }
+    .checkbox-label {
+      margin-left: 0;
+    }
   }
   select {
     width: 100%;
