--- a/less/modal.less
+++ b/less/modal.less
@@ -1808,8 +1808,11 @@ html[data-theme='dark'] {
     }
     .privileges-list {
       float: left;
-      width: 40%;
+      overflow-y: auto;
+      width: 45%;
+      max-height: 70vh;
       margin-top: 10px;
+      padding-left: 5px;
     }
   }
 }
