Add privilege module autocomplete for Config user privileges page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1821,7 +1821,7 @@ html[data-theme='dark'] {
     margin-bottom: 25px;
   }
   .group {
-    margin-bottom: 0;
+    margin-bottom: 20px;
     .privilege-checkbox {
       margin-left: -8px;
     }
