Update Config user privileges edit dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1825,6 +1825,9 @@ html[data-theme='dark'] {
     .privilege-checkbox {
       margin-left: -8px;
     }
+    .error-msg {
+      color: #da364a;
+    }
   }
   footer {
     text-align: center;
