Update Config Topology Owner page with Tenancy info.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1697,6 +1697,10 @@ html[data-theme='dark'] {
 #departmentTitleDialog-content {
   width: 550px;
   height: 450px;
+  .group {
+    width: 50%;
+    margin-top: 30px;
+  }
   .tree-section {
     margin-top: 20px;
     li {
