Add Export audit log functionality for Audit page.

--- a/less/app.less
+++ b/less/app.less
@@ -3468,6 +3468,10 @@ button.standard:hover:not([disabled]) {
           tbody tr {
             height: 45px;
           }
+          td.fileName {
+            white-space: pre-wrap;
+            word-break: break-all;
+          }
           td.patternName,
           td.groupList {
             .flex-item {
