Add Vans config form for NCCST report dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2508,8 +2508,11 @@ html[data-theme='dark'] {
   .align-center {
     text-align: center;
   }
-  .message {
-    margin-bottom: 15px;
+  .vans-config-form {
+    margin: 20px 0;
+    .group {
+      margin: 15px 0;
+    }
   }
 }
 #vansPieChartdialog-content {
