Add email notification functionality for Incident and Incident Management page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2769,3 +2769,17 @@ html[data-theme='dark'] {
     margin: 10px 20px;
   }
 }
+#notifyDialog {
+  .existing-email {
+    max-height: 500px;
+    overflow-y: auto;
+  }
+  .user-email {
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    padding: 10px 15px 15px 15px;
+    background-color: var(--formGroupBackground);
+  }
+}
