Add Event Tracing for trigger and Scan menu.

--- a/less/app.less
+++ b/less/app.less
@@ -4249,3 +4249,19 @@ button.standard:hover:not([disabled]) {
 
   }
 */}
+
+.hmd-trigger-menu {
+  ul {
+    li {
+      display: flex;
+      cursor: auto;
+      span {
+        width: 155px;
+      }
+      button {
+        width: 70px;
+        margin-right: 15px;
+      }
+    }
+  }
+}
