Add check all checkbox for email notification. Add delete button for inactive Config host.

--- a/less/app.less
+++ b/less/app.less
@@ -3361,6 +3361,12 @@ button.standard:hover:not([disabled]) {
             font-weight: bold;
             color: var(--primaryContentHeader);
           }
+          .fg-trashcan.host {
+            float: right;
+            font-size: 26px;
+            color: var(--primaryTextColor);
+            cursor: pointer;
+          }
           .host-info {
             position: relative;
             margin: 10px;
