Begin implementing the nav bar for Safety Scan tab.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1104,6 +1104,7 @@ html[data-theme='dark'] {
         }
         &.child {
           clear: both;
+          font-weight: normal;
           padding-left: 20px;
           background-color: var(--subFrameColor);
           border: none;
@@ -1363,6 +1364,10 @@ html[data-theme='dark'] {
       i.fg {
         float: right;
       }
+    }
+    ul.scan-list {
+      height: 260px;
+      overflow-y: auto;
     }
     .vans-notes {
       overflow: hidden;
