Complete left nav redesign for Host HMD section.

--- a/less/modal.less
+++ b/less/modal.less
@@ -857,7 +857,6 @@ html[data-theme='dark'] {
           flex-wrap: wrap;
           overflow-y: auto;
           max-height: 425px;
-          margin: 20px 0;
           button {
             margin-right: 10px;
           }
@@ -1333,9 +1332,8 @@ html[data-theme='dark'] {
         height: 410px;
       }
       .scan-wrapper {
-        margin-top: 5px;
         .scan-section {
-          width: 99%;
+          width: 100%;
         }
       }
       .settings-wrapper {
@@ -1366,7 +1364,7 @@ html[data-theme='dark'] {
       }
     }
     ul.scan-list {
-      height: 260px;
+      height: 340px;
       overflow-y: auto;
     }
     .vans-notes {
@@ -1463,6 +1461,7 @@ html[data-theme='dark'] {
       .scan-info,
       & > .network-behavior {
         height: 525px;
+        margin: 0 5px;
         min-height: auto;
         background: none;
       }
