--- a/less/modal.less
+++ b/less/modal.less
@@ -969,7 +969,7 @@ html[data-theme='dark'] {
             }
           }
           .settings-form {
-            margin: 0 10px;
+            margin: 0 10px  10px 10px;
             clear: both;
             .form-group {
               margin-bottom: 10px;
