--- a/less/app.less
+++ b/less/app.less
@@ -47,6 +47,7 @@ html {
   --formReadOnlyColor: #777;
   --formReadOnlyBackground: #eee;
   --formReadOnlyBorderColor: #d9d9d9;
+  --formDisabledBackground: #eee;
   --formCheckRadioColor: #001b34;
 
   --gisMapBackground: #001b34;
@@ -105,6 +106,7 @@ html[data-theme='dark'] {
   --formReadOnlyColor: #fff;
   --formReadOnlyBackground: #666;
   --formReadOnlyBorderColor: #666;
+  --formDisabledBackground: #292828;
   --formCheckRadioColor: #089bda;
 
   --gisMapBackground: #1f1e1e;
@@ -695,6 +697,11 @@ button.standard:hover:not([disabled]) {
     background-color: var(--formBackground);
     border-radius: 4px;
     border-color: rgba(0, 0, 0, 0.23);
+    &.disabled {
+      cursor: text;
+      color: var(--formReadOnlyColor);
+      background-color: var(--formDisabledBackground);
+    }
   }
   .checkbox-ui,
   .radio-ui {
