Add batch upload for Host Scan Info filter list.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2667,6 +2667,11 @@ html[data-theme='dark'] {
     min-width: 300px;
     padding: 15px 10px 5px 10px;
     overflow: hidden;
+    .number {
+      display: block;
+      width: 90px;
+      margin-bottom: 10px;
+    }
     .group {
       margin-bottom: 10px;
       textarea,
@@ -2700,6 +2705,9 @@ html[data-theme='dark'] {
       &:hover {
         background-color: rgba(0, 0, 0, 0) !important;
       }
+    }
+    .filter {
+      margin-bottom: 5px;
     }
   }
 }
