--- a/less/modal.less
+++ b/less/modal.less
@@ -2532,13 +2532,13 @@ html[data-theme='dark'] {
   max-height: 400px;
 }
 #reportNCCSTdialog-content {
-  max-height: 400px;
-  padding: 25px;
-  .align-center {
-    text-align: center;
-  }
+  width: 530px;
+  padding: 0 20px;
   .vans-config-form {
     margin: 20px 0;
+    .btn {
+      margin-right: 10px;
+    }
     .group {
       margin: 15px 0;
     }
