Move Safety score text field to import file dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2857,3 +2857,9 @@ html[data-theme='dark'] {
     }
   }
 }
+#importFileDialog-content {
+  .number {
+    width: 90px;
+    margin: 10px 10px 5px 10px;
+  }
+}
