--- a/less/modal.less
+++ b/less/modal.less
@@ -912,7 +912,9 @@ html[data-theme='dark'] {
         }
       }
       .vans-patch-record {
+        height: 440px;
         margin-top: 35px;
+        overflow-y: auto;
         .cell-header {
           color: var(--primaryContentHeader);
         }
@@ -920,6 +922,9 @@ html[data-theme='dark'] {
           display: inline-block;
           padding: 5px;
           border-radius: 5px;
+        }
+        .description {
+          width: 30%;
         }
       }
       .settings {
