Add Vans Record table data for HMD NCCST report section.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2539,7 +2539,14 @@ html[data-theme='dark'] {
 #reportNCCSTdialog-content {
   width: 530px;
   padding: 0 20px;
+  #vansRecordCpe {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 0;
+  }
   .vans-config-form {
+    position: relative;
     margin: 20px 0;
     .btn {
       margin-right: 10px;
