Complete the Host CPE maintenance page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2875,3 +2875,20 @@ html[data-theme='dark'] {
     margin: 10px 10px 5px 10px;
   }
 }
+#cpeEditDialog-content {
+  width: 800px;
+  .cpe-form {
+    .group-flex {
+      display: flex;
+      .group-parent {
+        width: 100%;
+      }
+    }
+    .group {
+      margin: 20px 10px;
+      &.cpe {
+        margin-top: 0;
+      }
+    }
+  }
+}
