Update confirm request dialog and GCB display count.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2894,3 +2894,11 @@ html[data-theme='dark'] {
     }
   }
 }
+#requestSentDialog-dialog {
+  .msg {
+    margin-top: 30px;
+  }
+  .msg, footer {
+    text-align: center;
+  }
+}
