--- a/less/app.less
+++ b/less/app.less
@@ -4090,6 +4090,13 @@ button.standard:hover:not([disabled]) {
       color: #fff;
       background-color: var(--formCheckRadioColor) !important;
     }
+    .safety-scan-filter {
+      display: flex;
+      justify-content: space-between;
+      .scan-operator {
+        width: 100px;
+      }
+    }
     .date-time-picker {
       float: left;
       width: 135px;
