Add two more text fields and optional establish date time picker.

--- a/less/app.less
+++ b/less/app.less
@@ -2877,6 +2877,9 @@ button.standard:hover:not([disabled]) {
                   background-color: var(--formBackground);
                   width: 100%;
                 }
+                textarea {
+                  border: none;
+                }
               }
               &.multi {
                 label {
