--- a/less/app.less
+++ b/less/app.less
@@ -3087,6 +3087,18 @@ button.standard:hover:not([disabled]) {
             }
           }
         }
+        .soc-content {
+          display: flex;
+          height: 20%;
+          justify-content: center;
+          align-items: center;
+          label {
+            margin-right: 10px;
+          }
+          .between {
+            margin-top: 0;
+          }
+        }
         .events-syslog-statistics {
           height: 78vh;
           .filter-section {
