Add track host list dialog for Host page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2902,3 +2902,12 @@ html[data-theme='dark'] {
     text-align: center;
   }
 }
+#trackHostListDialog-content {
+  .track-host-content {
+    text-align: center;
+    padding: 15px 10px;
+    .options-btns {
+      margin-bottom: 30px;
+    }
+  }
+}
