Minor styles updates and link fix.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2902,12 +2902,16 @@ html[data-theme='dark'] {
     text-align: center;
   }
 }
-#trackHostListDialog-content {
+#trackHostListDialog-dialog {
+  width: 360px;
   .track-host-content {
     text-align: center;
     padding: 15px 10px;
     .options-btns {
       margin-bottom: 30px;
     }
+  }
+  footer {
+    text-align: center;
   }
 }
