Update button actions appearance for VANS - CPE safety scan menu.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2915,3 +2915,13 @@ html[data-theme='dark'] {
     text-align: center;
   }
 }
+.MuiPopover-root {
+  .safety-scan-menu {
+    span.header {
+      margin-right: 20px;
+    }
+    button {
+      margin: 0 5px;
+    }
+  }
+}
